--- a/pico2023.md
+++ b/pico2023.md
@@ -6,3 +6,7 @@ decrypting cGljb0NURntwcm94aWVzX2FsbF90aGVfd2F5XzI1YmJhZTlhfQ== through base 64 
 Viewing the source you can see it is checking that the input matches "p.....F"
 entering any value that matches the format gives picoCTF{succ3ssfully_matchtheregex_8ad436ed}
 ## SOAP ##
+When viewing the sources, the index shows
+`<form class="detailForm" action="/data" method="POST">`
+This shows a POST request to the location /data. Using burp's interceptor, you can write a POST request to /data to get <img width="1042" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/3fb1a6eb-725a-4af2-bce3-738fc1211fa9">
+flag : picoCTF{XML_3xtern@l_3nt1t1ty_4dbeb2ed}
