--- a/pico2023.md
+++ b/pico2023.md
@@ -11,4 +11,5 @@ When viewing the sources, the index has an interesting line
 This shows a POST request to the location /data. Using burp's interceptor, you can write a xml POST request to /data to get <img width="1042" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/3fb1a6eb-725a-4af2-bce3-738fc1211fa9">
 flag : picoCTF{XML_3xtern@l_3nt1t1ty_4dbeb2ed}
 ## More SQLi ##
-I first entered ' and ' as the user and pw to find an error. Because an error occured, its confirmed there is a SQL injection possible. By entering a common phrase into the password `'or 1=1;-- ` to get into the database. Using `' UNION SELECT sql,flag,null FROM sqlite_master;--`gives <img width="387" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/85aeffd9-37c0-4a6e-ae64-8d84282d8344"> finally by selecting flag from more_table, `' UNION SELECT flag,null,null FROM more_table;--` I get picoCTF{G3tting_5QL_1nJ3c7I0N_l1k3_y0u_sh0ulD_c8ee9477}.
+I first entered ' and ' as the user and pw to find an error. Because an error occured, its confirmed there is a SQL injection possible. By entering a common phrase into the password `'or 1=1;-- ` to get into the database. Using `' UNION SELECT sql,flag,null FROM sqlite_master;--`gives <img width="387" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/85aeffd9-37c0-4a6e-ae64-8d84282d8344"> 
+finally by selecting flag from more_table, `' UNION SELECT flag,null,null FROM more_table;--` I get picoCTF{G3tting_5QL_1nJ3c7I0N_l1k3_y0u_sh0ulD_c8ee9477}.
