--- a/pico2023.md
+++ b/pico2023.md
@@ -1,7 +1,7 @@
 # Web
 ## findme
 Using burp you can see the urls "//next-page/id=cGljb0NURntwcm94aWVzX2Fs" and "/next-page/id=bF90aGVfd2F5XzI1YmJhZTlhfQ==."
-decrypting cGljb0NURntwcm94aWVzX2FsbF90aGVfd2F5XzI1YmJhZTlhfQ== through base 64 gives picoCTF{proxies_all_the_way_25bbae9a}
+decrypting cGljb0NURntwcm94aWVzX2FsbF90aGVfd2F5XzI1YmJhZTlhfQ== through base 64 gives `picoCTF{proxies_all_the_way_25bbae9a}`
 ## MatchTheRegex
 Viewing the source you can see it is checking that the input matches "p.....F"
 entering any value that matches the format gives picoCTF{succ3ssfully_matchtheregex_8ad436ed}
@@ -9,11 +9,21 @@ entering any value that matches the format gives picoCTF{succ3ssfully_matchthere
 When viewing the sources, the index has an interesting line
 `<form class="detailForm" action="/data" method="POST">`
 This shows a POST request to the location /data. Using burp's interceptor, you can write a xml POST request to /data to get <img width="1042" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/3fb1a6eb-725a-4af2-bce3-738fc1211fa9">
-flag : picoCTF{XML_3xtern@l_3nt1t1ty_4dbeb2ed}
+flag : `picoCTF{XML_3xtern@l_3nt1t1ty_4dbeb2ed}`
 ## More SQLi
 I first entered ' and ' as the user and pw to find an error. Because an error occured, its confirmed there is a SQL injection possible. By entering a common phrase into the password `'or 1=1;-- ` to get into the database. Using `' UNION SELECT sql,flag,null FROM sqlite_master;--`gives <img width="932" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/364b31be-f37a-44bb-a031-b81bbbb7a86a">
 
-finally by selecting flag from more_table, `' UNION SELECT flag,null,null FROM more_table;--` I get picoCTF{G3tting_5QL_1nJ3c7I0N_l1k3_y0u_sh0ulD_c8ee9477}.
+finally by selecting flag from more_table, `' UNION SELECT flag,null,null FROM more_table;--` I get `picoCTF{G3tting_5QL_1nJ3c7I0N_l1k3_y0u_sh0ulD_c8ee9477}.`
 ## Java Code Analysis
 By logging in with the provided credentials, this page opens <img width="1001" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/2c6d0ccc-20db-4841-9cf3-a628840a3174">
 It's obvious the book we want is the Flag book. To elevate our status, I looked at the HTTP history requests on burp and saw they were using tokens to validate the login. looking at the structure, several files look promising. 
+# Cryptography
+## HideToSee
+Using futureboy to extract the jpg through the Prompt to save method, you get `krxlXGU{zgyzhs_xizxp_05y2z65z}.` putting that through an atbash decipher gives `picoCTF{atbash_crack_05b2a65a}`
+## ReadMyCert
+decrypting through base64 gives `picoCTF{read_mycert_373b4ab0}`
+## rotation
+Putting it in a rot decipher shows that it was rotaed 8 characters in the alphabet. `	picoCTF{r0tat1on_d3crypt3d_7d140864}`
+## PowerAnalysis: Warmup
+
+
