--- a/pico2023.md
+++ b/pico2023.md
@@ -24,6 +24,6 @@ Using futureboy to extract the jpg through the Prompt to save method, you get `k
 decrypting through base64 gives `picoCTF{read_mycert_373b4ab0}`
 ## rotation
 Putting it in a rot decipher shows that it was rotaed 8 characters in the alphabet. `	picoCTF{r0tat1on_d3crypt3d_7d140864}`
-## PowerAnalysis: Warmup
-
-
+## RSA
+Inspecting the source code shows the challenge uses a RSA encryption system. the pow function computes the anger value, resulting in the encryption of pride, the plaintext. 
+to reverse the encryption process you can write a script that brute forces the p and q values as long as ed-1 doesn't have a ridiculous number of divisors by checking for primes with 128 bits. Once you get the p and q values, multiply them to get the n modulus, evaluate phi(n) with (p-1)(q-1), then compute d with the `Crypto.Util.number.inverse` function. decrypting the ciphertext with `m = pow(c, d, n)` gave `picoCTF{7h053_51n5_4r3_n0_m0r3_3858bd66}`
