--- a/pico2023.md
+++ b/pico2023.md
@@ -27,3 +27,14 @@ Putting it in a rot decipher shows that it was rotaed 8 characters in the alphab
 ## RSA
 Inspecting the source code shows the challenge uses a RSA encryption system. the pow function computes the anger value, resulting in the encryption of pride, the plaintext. 
 to reverse the encryption process you can write a script that brute forces the p and q values as long as ed-1 doesn't have a ridiculous number of divisors by checking for primes with 128 bits. Once you get the p and q values, multiply them to get the n modulus, evaluate phi(n) with (p-1)(q-1), then compute d with the `Crypto.Util.number.inverse` function. decrypting the ciphertext with `m = pow(c, d, n)` gave `picoCTF{7h053_51n5_4r3_n0_m0r3_3858bd66}`
+# Rev
+## Ready Gladiator 0
+Literally anything works
+`picoCTF{h3r0_t0_z3r0_4m1r1gh7_e476d4cf}`
+## Reverse
+strings ret | grep picoCTF
+`picoCTF{3lf_r3v3r5ing_succe55ful_c83965de}`
+## Safe Opener 2
+strings SafeOpener.class | grep picoCTF
+`picoCTF{SAf3_0p3n3rr_y0u_solv3d_it_7db9fb8c}`
+## timer
