--- a/pico2023.md
+++ b/pico2023.md
@@ -38,3 +38,4 @@ strings ret | grep picoCTF
 strings SafeOpener.class | grep picoCTF
 `picoCTF{SAf3_0p3n3rr_y0u_solv3d_it_7db9fb8c}`
 ## timer
+decompiling and grepping for the flag reveals its in BuildConfig.java `picoCTF{t1m3r_r3v3rs3d_succ355fully_17496}`
