--- a/pico2023.md
+++ b/pico2023.md
@@ -39,3 +39,12 @@ strings SafeOpener.class | grep picoCTF
 `picoCTF{SAf3_0p3n3rr_y0u_solv3d_it_7db9fb8c}`
 ## timer
 decompiling and grepping for the flag reveals its in BuildConfig.java `picoCTF{t1m3r_r3v3rs3d_succ355fully_17496}`
+## Ready Gladiator 1
+almost any corewars code on the internet, or same solution as gladiator 2. 
+`picoCTF{1mp_1n_7h3_cr055h41r5_ec57a42e}`
+## Ready Gladiator 2
+```
+JMP 0, <-5
+```
+Leaked on a reddit post! Or try designing your own corewars warrior with idk a core clear model 
+`picoCTF{d3m0n_3xpung3r_fc41524e}`
