--- a/pico2023.md
+++ b/pico2023.md
@@ -11,9 +11,17 @@ When viewing the sources, the index has an interesting line
 This shows a POST request to the location /data. Using burp's interceptor, you can write a xml POST request to /data to get <img width="1042" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/3fb1a6eb-725a-4af2-bce3-738fc1211fa9">
 flag : `picoCTF{XML_3xtern@l_3nt1t1ty_4dbeb2ed}`
 ## More SQLi
-I first entered ' and ' as the user and pw to find an error. Because an error occured, its confirmed there is a SQL injection possible. By entering a common phrase into the password `'or 1=1;-- ` to get into the database. Using `' UNION SELECT sql,flag,null FROM sqlite_master;--`gives <img width="932" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/364b31be-f37a-44bb-a031-b81bbbb7a86a">
+I first entered ' and ' as the user and pw to find an error. Because an error occured, its confirmed there is a SQL injection possible. By entering a common phrase into the password `'or 1=1;-- ` to get into the database. Using 
+```
+' UNION SELECT sql,flag,null FROM sqlite_master;--
+```
+gives <img width="932" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/364b31be-f37a-44bb-a031-b81bbbb7a86a">
 
-finally by selecting flag from more_table, `' UNION SELECT flag,null,null FROM more_table;--` I get `picoCTF{G3tting_5QL_1nJ3c7I0N_l1k3_y0u_sh0ulD_c8ee9477}.`
+finally by selecting flag from more_table, 
+```
+' UNION SELECT flag,null,null FROM more_table;--
+```
+I get `picoCTF{G3tting_5QL_1nJ3c7I0N_l1k3_y0u_sh0ulD_c8ee9477}.`
 ## Java Code Analysis
 By logging in with the provided credentials, this page opens <img width="1001" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/2c6d0ccc-20db-4841-9cf3-a628840a3174">
 It's obvious the book we want is the Flag book. To elevate our status, I looked at the HTTP history requests on burp and saw they were using tokens to validate the login. looking at the structure, several files look promising. 
@@ -32,10 +40,14 @@ to reverse the encryption process you can write a script that brute forces the p
 Literally anything works
 `picoCTF{h3r0_t0_z3r0_4m1r1gh7_e476d4cf}`
 ## Reverse
+```
 strings ret | grep picoCTF
+```
 `picoCTF{3lf_r3v3r5ing_succe55ful_c83965de}`
 ## Safe Opener 2
+```
 strings SafeOpener.class | grep picoCTF
+```
 `picoCTF{SAf3_0p3n3rr_y0u_solv3d_it_7db9fb8c}`
 ## timer
 decompiling and grepping for the flag reveals its in BuildConfig.java `picoCTF{t1m3r_r3v3rs3d_succ355fully_17496}`
