--- a/pico2023.md
+++ b/pico2023.md
@@ -60,3 +60,12 @@ JMP 0, <-5
 ```
 Leaked on a reddit post! Or try designing your own corewars warrior with idk a core clear model 
 `picoCTF{d3m0n_3xpung3r_fc41524e}`
+## Virtual Machine 0 and 1
+get blender on a laptop that isnt stupid and doesnt refuse to open blender. 
+# Forensics
+## hideme
+binwalk shows a hidden secret/flag.png
+```
+binwalk -e flag.png
+```
+opening the flag.png in the extracted directory gives an image which you can convert to text to get `picoCTF{Hiddinng_An_imag3_within_@n_ima9e_ad9f6587}`
