--- a/pico2023.md
+++ b/pico2023.md
@@ -69,3 +69,19 @@ binwalk shows a hidden secret/flag.png
 binwalk -e flag.png
 ```
 opening the flag.png in the extracted directory gives an image which you can convert to text to get `picoCTF{Hiddinng_An_imag3_within_@n_ima9e_ad9f6587}`
+## PcapPoisoning
+kind of cheating but if you choose to open with word/notepad or any other text editor you can control f picoCTF to get `picoCTF{P64P_4N4L7S1S_SU55355FUL_fc4e803f}`
+Setting a display filter for a picoCTF string is another option on wireshark
+## who is it
+viewing the full header of the gmail gives you the ip adress `173.249.33.206`
+using an IP adress finder gives the person's name `picoCTF{WilhelmZwalina}`
+## FindAndOpen
+Looking through the packets on wireshark reveals a base 64 string <img width="1115" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/13870da5-dfa3-4d9b-911e-ab9968c455eb">
+decoding the string gives `picoCTF{R34DING_LOKd_`
+using that as the password opens the file, `picoCTF{R34DING_LOKd_fil56_succ3ss_c2e6d949}`
+## MSB
+stegonline extracts the data with these settings
+<img width="534" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/25d09b2c-2eda-4695-9bb2-70b6141fcc59">
+
+`picoCTF{15_y0ur_que57_qu1x071c_0r_h3r01c_24d55bee}`
+
