--- a/pico2023.md
+++ b/pico2023.md
@@ -80,7 +80,7 @@ Looking through the packets on wireshark reveals a base 64 string <img width="11
 decoding the string gives `picoCTF{R34DING_LOKd_`
 using that as the password opens the file, `picoCTF{R34DING_LOKd_fil56_succ3ss_c2e6d949}`
 ## MSB
-stegonline extracts the data with these settings
+downloading and uploading the image to stegonline extracts the data with these settings
 <img width="534" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/25d09b2c-2eda-4695-9bb2-70b6141fcc59">
 
 `picoCTF{15_y0ur_que57_qu1x071c_0r_h3r01c_24d55bee}`
