--- a/pico2023.md
+++ b/pico2023.md
@@ -15,7 +15,7 @@ I first entered ' and ' as the user and pw to find an error. Because an error oc
 ```
 ' UNION SELECT sql,flag,null FROM sqlite_master;--
 ```
-gives <img width="932" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/364b31be-f37a-44bb-a031-b81bbbb7a86a">
+ <img width="932" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/364b31be-f37a-44bb-a031-b81bbbb7a86a">
 
 finally by selecting flag from more_table, 
 ```
