--- a/pico2023.md
+++ b/pico2023.md
@@ -84,4 +84,29 @@ downloading and uploading the image to stegonline extracts the data with these s
 <img width="534" alt="image" src="https://github.com/emilyh1013/writeups/assets/138421980/25d09b2c-2eda-4695-9bb2-70b6141fcc59">
 
 `picoCTF{15_y0ur_que57_qu1x071c_0r_h3r01c_24d55bee}`
-
+# General Skills
+## chrono 
+instead of doing the crontab stuff you can just 
+```
+cd ..
+cd ..
+cd challenge
+cat metadata.json
+```
+to get the flag
+`picoCTF{Sch3DUL7NG_T45K3_L1NUX_9d5cb744}`
+## money-ware
+google it
+picoCTF{Petya}
+## Permissions 
+also instead of actually doing it you can use the same solution as chrono
+`picoCTF{uS1ng_v1m_3dit0r_89e9cf1a}`
+## repetitions
+plug it through base64 a lot
+`picoCTF{base64_n3st3d_dic0d!n8_d0wnl04d3d_de523f49}`
+## useless
+the challenge tags include the command "man"
+```
+man useless
+```
+`picoCTF{us3l3ss_ch4ll3ng3_3xpl0it3d_4373}`
