--- a/pico2023.md
+++ b/pico2023.md
@@ -110,3 +110,13 @@ the challenge tags include the command "man"
 man useless
 ```
 `picoCTF{us3l3ss_ch4ll3ng3_3xpl0it3d_4373}`
+## Special
+experimenting around shows that 
+` ``ls`` ``-a`` ` works as a command, revealing "blargh"
+` ``cat`` ``blargh`` ` shows its a directory, but when i try to cd in it refuses to open, so ` ``ls`` ``blargh/`` ` reveals a flag.txt.
+```
+``cat`` ``blargh/flag.txt``
+```
+`picoCTF{5p311ch3ck_15_7h3_w0r57_0c61d335}`
+## Specialer 
+idk
