--- a/pico2023.md
+++ b/pico2023.md
@@ -97,7 +97,7 @@ to get the flag
 `picoCTF{Sch3DUL7NG_T45K3_L1NUX_9d5cb744}`
 ## money-ware
 google it
-picoCTF{Petya}
+`picoCTF{Petya}`
 ## Permissions 
 also instead of actually doing it you can use the same solution as chrono
 `picoCTF{uS1ng_v1m_3dit0r_89e9cf1a}`
